chore:修改.gitignore文件

--- a/JS算法相关/字符串处理.md
+++ b/JS算法相关/字符串处理.md
@@ -1,3 +1,5 @@
+# 1、替换字符串指定位置的字符为特定字符
+```js
 /**
  * @function 字符串隐藏指定位置的值替换成特定的字符
  * @param s {number} 开始索引 
@@ -7,7 +9,7 @@
  * @return {string} 替换后的字符串
  */
 // 方法一
-export function hidePhone( str:string,s:number=3, l:number=4,tag:string='*') {
+export function changeCharacter( str,s=3, l=4,tag='*') {
   const arr = str.split('')
   const n = arr.splice(s, l)
   const nL = n.length
@@ -21,8 +23,9 @@ export function hidePhone( str:string,s:number=3, l:number=4,tag:string='*') {
       return arr.join('')
   }
 }
+
 // 方法二
-export function hidePhone1(str: string| number, s: number = 3, l: number = 4, tag: string = '*') {
+export function changeCharacter1(str, s = 3, l = 4, tag = '*') {
   const stringL = String(str)
   if (typeof stringL === 'string') {
     const sStr = stringL.substr(0,s)
@@ -34,3 +37,4 @@ export function hidePhone1(str: string| number, s: number = 3, l: number = 4, ta
     return str
   }
 }
+```
